- Bump ftw.keywordwidget to 2.1.0 to use async mode of keyword widgets for document and dossier keywords. [njohner]
- Fix an issue where it was no longer possible to modify a workspace as a workspace owner. [elioschmutz]
- Fix workspace participation restapi to handle new payload format for post and patch requests due to the new plone.restapi. [elioschmutz]
- Update workflow security for opengever_workspace workflow to fix permission on existing workspaces. [elioschmutz]
- Remove userid from the users fullname in all teamraum sources. [phgross]
- Move task reminders of responsibles to the successor, when accepting a multi admin unit task. [phgross]
- Bump ftw.tabbedview version to 4.1.3 [njohner]


2019.4.0rc1 (2019-08-08)
------------------------

- Bump ftw.bumblebee to 3.7.3 to get fix for indexing checksum in ftw.solr. [lgraf]
- Implement SIP delivery via FilesystemTransport. [lgraf]
- Disallow deleting repository folders and roots except from the RepositoryDeleter. [njohner]
- Expose document actions in @actions endpoint in separate file_actions category. [njohner, deiferni]
- Nightly jobs: Add short -f option as alias for --force. [lgraf]
- Nightly jobs: Don't require ftw.raven when running locally [lgraf]
- Fix team actor profile_url for foreign users. [phgross]
- Include actor_id and actor_label in @notifications endpoint responses. [lgraf]
- Bump docxcompose version to 1.0.1 [njohner]
- Improve SIP package generation and download. [phgross]
- Fix qa tests. [lgraf]
- Disable properties action for teams. [deiferni]
- Add source vocabularies for workspace invitations and todo responsibles. [njohner]
- Add hard limit for number of todos in single workspace. [njohner]
- Enable c.indexing during tests, but patch it to not defer operations. [lgraf]
- Add teamraum todolist content-type. [phgross]
- Add teamraum todo content-type. [elioschmutz]
- Fix creation and handling for subtasks of sequential tasks. [phgross]